# pubc.pro

./: .gitignore  build.gradle  build.yml  gradle.properties  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: car.glb  house.glb  map.glb  player.glb  woman1.glb  woman2.glb  woman3.glb
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/Animation/: AnimationController.h  BlendTree.h
app/src/main/cpp/Core/: Engine.h  GameEvent.h  ObjectPool.h  ObjectPool.h.bak  Utils.h
app/src/main/cpp/Input/: IInputDevice.h  TouchInput.h
app/src/main/cpp/NPC/: NPC.h  NPCBrain.h
app/src/main/cpp/Physics/: CapsuleCollider.h  CollisionSystem.h  Raycaster.h
app/src/main/cpp/Player/: IPlayerState.h  Player.h  Player.h.bak  PlayerMovement.h
app/src/main/cpp/Player/States/: PlayerAirState.h  PlayerCrouchState.h  PlayerIdleState.h  PlayerRunState.h  PlayerWalkState.h
app/src/main/cpp/Rendering/: FrustumCulling.h  PlayerCamera.h  Renderer.h
app/src/main/cpp/UI/: HUDManager.h  TouchJoystick.h
app/src/main/cpp/Vehicle/: Car.h  VehiclePhysics.h
app/src/main/cpp/World/: LevelStreaming.h  MapManager.h
